err/pypr.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyPR-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pypr'...
Listing './lib/python3.5/site-packages/pypr/ann'...
Listing './lib/python3.5/site-packages/pypr/clustering'...
Compiling './lib/python3.5/site-packages/pypr/clustering/gmm.py'...
***   File "./lib/python3.5/site-packages/pypr/clustering/gmm.py", line 46
    raise ValueError, "MU must be a 1 dimensional array"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypr/clustering/gmm_plot.py'...
***   File "./lib/python3.5/site-packages/pypr/clustering/gmm_plot.py", line 27
    print cen_marg, cov_marg, mc_marg
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pypr/clustering/kmeans.py'...
***   File "./lib/python3.5/site-packages/pypr/clustering/kmeans.py", line 166
    print "Initial cluster centers: "
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pypr/gp'...
Compiling './lib/python3.5/site-packages/pypr/gp/GaussianProcess.py'...
***   File "./lib/python3.5/site-packages/pypr/gp/GaussianProcess.py", line 41
    raise ValueError, "X and y must have the same number of samples."
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypr/gp/covar_funcs.py'...
***   File "./lib/python3.5/site-packages/pypr/gp/covar_funcs.py", line 19
    raise Exception, "You should not use this function, just extend it."
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pypr/helpers'...
Compiling './lib/python3.5/site-packages/pypr/helpers/helpers.py'...
***   File "./lib/python3.5/site-packages/pypr/helpers/helpers.py", line 9
    raise ValueError, "Axis argument must be 0 or 1"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pypr/optimization'...
Compiling './lib/python3.5/site-packages/pypr/optimization/minimize.py'...
***   File "./lib/python3.5/site-packages/pypr/optimization/minimize.py", line 119
    print "Sorry:", sys.exc_type, ":", sys.exc_value
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pypr/preprocessing'...
Compiling './lib/python3.5/site-packages/pypr/preprocessing/lag_matrix.py'...
***   File "./lib/python3.5/site-packages/pypr/preprocessing/lag_matrix.py", line 17
    print F
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pypr/stattest'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
